--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Hello World
+<script type="module" src="https://threejsfundamentals.org/threejs/resources/threejs/r122/build/three.module.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+<canvas id="c"></canvas>
+<script type="text/javascript" src="js/test.js"></script>
