--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<script type="module" src="https://threejsfundamentals.org/threejs/resources/threejs/r122/build/three.module.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
-<canvas id="c"></canvas>
-<script type="text/javascript" src="js/test.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Fanyun Peng</title>
+</head>
+<body>
+	<p><a href="html/pattern.html">shader pattern practice</p>
+</body>
+</html>
