creepy face shader

--- a/html/pattern.html
+++ b/html/pattern.html
@@ -10,6 +10,8 @@
 	<div id="container"></div>
 </body>
 </html> -->
-<canvas id="c"></canvas>
-<!-- <script type="text/javascript" src="../js/link.js"></script> -->
+<canvas id="c1"></canvas>
+<canvas id="c2"></canvas>
+
+<script type="text/javascript" src="../js/face.js"></script>
 <script type="text/javascript" src="../js/pattern.js"></script>
